@startuml core
    package django.contrib.auth.models <<Folder>> {
        class User {
            username : string
            password : string
            email : string
            is_staff : boolean
            is_active : boolean
            is_superuser : boolean
        }
    }

    package core <<Folder>> {
        abstract UniqueNameMixin {
            <<unique>> name
        }

        class Business
        Business --|> UniqueNameMixin

        class ClientUser {
            <<optional>>profile_picture : image
            <<calculated property>>score : integer
        }
        ClientUser --|> User
        note right of ClientUser::score
            Sum of all UserScoreModifier.score
        end note

        class Company {
            <<optional>>logo : image
            <<calculated property>>score : integer
            description : text
        }
        Company --|> UniqueNameMixin
        Company --> Business
        note right of Company::score
            Sum of all Judgement.vote
        end note

        enum Vote {
            VERY_BAD = -2,
            BAD = -1,
            GOOD = 1,
            VERY_GOOD = 2
        }

        class Judgement {
            opinion : text
        }
        Judgement --> Company
        Judgement --> ClientUser
        Judgement --> Vote

        class UserScoreModifierInstance {
            date_time: datetime
        }
        UserScoreModifierInstance --> ClientUser
        UserScoreModifierInstance --> UserScoreModifierType

        class UserScoreModifierType {
            score : integer
        }
        UserScoreModifierType --|> UniqueNameMixin
    }
@enduml
